[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyxis-ai"
version = "0.1.0"
description = "A minimal, human-centered Python agent harness for building controllable AI workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Pyxis Contributors" }
]
keywords = ["ai", "agents", "workflow", "harness", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/pyxis-ai/pyxis"
Repository = "https://github.com/pyxis-ai/pyxis"

[tool.hatch.build.targets.wheel]
packages = ["src/pyxis"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
